# splain

./: .gitignore  AGENTS.md  README.md  check.sh  pyproject.toml
docs/superpowers/plans/: 2026-06-27-api-mode.md  2026-06-27-chat-mode.md
docs/superpowers/specs/: 2026-06-27-api-mode-design.md  2026-06-27-chat-mode-design.md
splain/: __init__.py  chat.py  cli.py  correlate.py  finnhub.py  news.py  newsapi.py  prices.py  server.py
tests/: test_chat.py  test_finnhub.py  test_news.py  test_newsapi.py  test_prices.py  test_server.py
