[project]
name = "splain"
version = "0.1.0"
description = "Correlate historical stock price moves with news stories"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "yfinance>=0.2",
    "pandas>=2.0",
    "requests>=2.31",
    "python-dateutil>=2.9",
    "python-dotenv>=1.2.2",
]

[project.scripts]
splain = "splain.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-vcr>=1.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
