[project]
name = "splain"
version = "0.1.0"
description = "Correlate historical stock price moves with news stories"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2",
    "pandas>=2.0",
    "requests>=2.31",
    "python-dateutil>=2.9",
    "python-dotenv>=1.2.2",
    "click>=8.4.2",
    "flask>=3.1.3",
    "anthropic>=0.40",
]

[project.scripts]
splain = "splain.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=8.0",
    "responses>=0.26.1",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
